--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Practica de conceptos (tablas)</title>
+  <title>Practica con Tablas</title>
   <link rel="stylesheet" href="css/Styles.css" />
 </head>
 <body>
